# AoC21

./: nixpkgs.nix
01/: Main.hs
02/: Main.hs
03/: Main.hs  shell.nix
04/: Main.hs  aoc.cabal
05/: Main.hs  aoc.cabal
06/: Main.hs  aoc.cabal
07/: Main.hs
