cabal-version:       2.2
name:                aoc
version:             0.1.0.0
author:              Jezen Thomas
maintainer:          jezen@jezenthomas.com
build-type:          Simple

executable aoc
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , split
  default-language:    Haskell2010
